--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "vite build",
-    "dev": "vite"
-  },
-  "devDependencies": {
-    "@tailwindcss/vite": "^4.0.0",
-    "axios": "^1.8.2",
-    "concurrently": "^9.0.1",
-    "laravel-vite-plugin": "^1.2.0",
-    "tailwindcss": "^4.0.0",
-    "vite": "^6.2.4"
-  },
-  "dependencies": {
-    "flowbite": "^1.6.5"
-  }
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.6.4",
+        "flowbite": "^3.1.2",
+        "laravel-vite-plugin": "^1.0.0",
+        "postcss": "^8.5.1",
+        "tailwindcss": "^4.0.4",
+        "vite": "^5.0.0"
+    }
 }
